hints de implementacion

--- a/.README.md.html
+++ b/.README.md.html
@@ -665,6 +665,10 @@ function setDocumentScrollTop(ypos)
  <li>cu&aacute;ntos (un n&uacute;mero) de sus profesionales contratados estudi&oacute; en una determinada universidad.</li> 
  <li> <strong>esta es m&aacute;s dif&iacute;cil</strong><br /> dado un profesional, si es <em>poco atractivo</em> para la empresa.<br /> Esto es: si para cada provincia en la que puede trabajar el profesional, la empresa cuenta con otro que tambi&eacute;n puede cubrir esa provincia, y que cobra m&aacute;s barato.</li> 
 </ul> 
+<h3> <a id="comentario-que-puede-ayudar-para-la-resoluci&oacute;n" class="anchor" href="#comentario-que-puede-ayudar-para-la-resoluci%C3%B3n" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comentario que puede ayudar para la resoluci&oacute;n</h3> 
+<p>Cada universidad debe acordarse provincia y honorarios recomendados, se le setean y listo.<br /> Por otro lado, <em>est&aacute; mal</em> que los profesionales vinculados se acuerden de qu&eacute; provincias tienen habilitadas y cu&aacute;les son sus honorarios; le tienen que pedir estos datos a la Universidad.</p> 
+<p>De paso: <strong>OJO</strong> que la Universidad est&aacute; en <em>una</em> provincia, pero el profesional tiene que devolver una <em>colecci&oacute;n</em> de provincias. Un profesional vinculado devolver&aacute; una colecci&oacute;n con un solo elemento.</p> 
+<br /> 
 <h2> <a id="test-de-la-etapa-1" class="anchor" href="#test-de-la-etapa-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Test de la etapa 1</h2> 
 <p>Tenemos estas universidades:</p> 
 <ul> 
@@ -688,7 +692,8 @@ function setDocumentScrollTop(ypos)
  <li>las provincias de Santa Fe y C&oacute;rdoba est&aacute;n cubiertas, pero Misiones no.</li> 
  <li>dos de sus profesionales estudiaron en Rosario, uno en Hurlingham, ninguno (o sea cero) en San Mart&iacute;n.</li> 
 </ul> 
-<p>Hacer un test que verifique esto.</p> 
+<p>Hacer los tests que sean necesarios para verificar esto. Se puede usar <code>fixture</code> para definir informaci&oacute;n que se usa en varios tests dentro de un <em>describe file</em>.</p> 
+<br /> 
 <h2> <a id="etapa-2---solicitantes" class="anchor" href="#etapa-2---solicitantes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Etapa 2 - solicitantes</h2> 
 <p>Los <strong>solicitantes</strong> pueden ser personas o instituciones. Nos interesa saber para cada solicitante si puede (o no) ser <em>atendido por un profesional</em>.</p> 
 <p>De cada <strong>persona</strong> se debe indicar en qu&eacute; provincia vive. Puede ser atendida por los profesionales que pueden trabajar en la provncia donde vive la persona. Cada <strong>instituci&oacute;n</strong> tiene una lista de universidades que reconoce. Puede ser atendida por los profesionales que estudiaron en alguna de las universidades reconocidas por la instituci&oacute;n.</p> 
