--- a/.README.md.html
+++ b/.README.md.html
@@ -694,9 +694,27 @@ function setDocumentScrollTop(ypos)
 </ul> 
 <p>Hacer los tests que sean necesarios para verificar esto. Se puede usar <code>fixture</code> para definir informaci&oacute;n que se usa en varios tests dentro de un <em>describe file</em>.</p> 
 <br /> 
-<h2> <a id="etapa-2---solicitantes" class="anchor" href="#etapa-2---solicitantes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Etapa 2 - solicitantes</h2> 
+<h2> <a id="etapa-2---cobros" class="anchor" href="#etapa-2---cobros" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Etapa 2 - cobros</h2> 
+<p>Agregar al modelo la consecuencia de que un profesional cobre un importe de dinero, de acuerdo a estas reglas:</p> 
+<ul> 
+ <li>los <strong>profesionales vinculados</strong> le donan la mitad a la universidad, y la otra mitad la gastan inmediatamente sin que quede registro en la aplicaci&oacute;n. Hay que mantener el total recibido por donaciones de cada universidad.</li> 
+ <li>los <strong>profesionales asociados</strong> le dan todo lo que cobran a la <em>Asociaci&oacute;n de Profesionales del Litoral</em>. Agregar un objeto que represente a esta Asociaci&oacute;n, que mantiene el total recaudado.</li> 
+ <li>los <strong>profesionales libres</strong> se guardan todo lo que cobran. Debe mantenerse el total recibido por cada uno. Un profesional libre le puede <em>pasar</em> dinero a otro: se resta de lo recibido por el que da, se suma al recibido por el que recibe. P.ej. si <code>ruben</code> tiene 10000 de total recaudado, <code>nora</code> tiene 12000, y hacemos <pre><code>nora.pasarDinero(ruben,4000)
+</code></pre> entonces <code>nora</code> pasa a tener 8000, y <code>ruben</code> 14000.</li> 
+</ul> 
+<br /> 
+<h2> <a id="etapa-3---solicitantes" class="anchor" href="#etapa-3---solicitantes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Etapa 3 - solicitantes</h2> 
 <p>Los <strong>solicitantes</strong> pueden ser personas o instituciones. Nos interesa saber para cada solicitante si puede (o no) ser <em>atendido por un profesional</em>.</p> 
 <p>De cada <strong>persona</strong> se debe indicar en qu&eacute; provincia vive. Puede ser atendida por los profesionales que pueden trabajar en la provncia donde vive la persona. Cada <strong>instituci&oacute;n</strong> tiene una lista de universidades que reconoce. Puede ser atendida por los profesionales que estudiaron en alguna de las universidades reconocidas por la instituci&oacute;n.</p> 
-<p>A una empresa se le tiene que poder preguntar si puede <em>satisfacer</em> a un solicitante. La condici&oacute;n para esto es que el solicitante pueda ser atendido por, al menos, uno de los profesionales contratados por la empresa.</p>
+<p>A una empresa se le tiene que poder preguntar si puede <em>satisfacer</em> a un solicitante. La condici&oacute;n para esto es que el solicitante pueda ser atendido por, al menos, uno de los profesionales contratados por la empresa.</p> 
+<h2> <a id="etapa-4---registro-de-trabajos-hechos" class="anchor" href="#etapa-4---registro-de-trabajos-hechos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Etapa 4 - registro de trabajos hechos</h2> 
+<p>Agregar al modelo el registro de cada trabajo que una empresa de servicios hace para un determinado solicitante. Para esto, agregarle a los objetos que representan empresas la capacidad de entender el mensaje <code>darServicio</code>. P.ej. si <code>laMejor</code> es una empresa y <code>mirna</code> una solicitante, entonces haciendo</p> 
+<pre><code>laMejor.darServicio(mirna)
+</code></pre> 
+<p>se indica que se le est&aacute; dando a Mirna un servicio. Se asume que cada servicio insume una hora de tiempo de un profesional. Debe pasar lo siguiente:</p> 
+<ul> 
+ <li>si el solicitante puede ser atendido (etapa 3), entonces elegir uno cualquiera de los profesionales que puede atenderlo, hacer que ese profesional cobre (etapa 2) su honorario por hora (etapa 1), y agregar al solicitante al conjunto de <em>clientes</em> de la empresa.</li> 
+ <li>caso contrario, lanzar un error.</li> 
+</ul>
 </body>
 </html>
